fixtures/invalid/private-cross-cell-import/src/consumer/public.ts
import { privateValue } from "../producer/private";
export const consumerValue = privateValue;
